bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
i
t
e
t
h
i
s

t
i
m
e
