bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__guardian_denied_exec_renders_warning_and_denied_request.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
@
c
o
r
e
/
s
r
c
/
c

o
d
e
x
.
r
s
https://example.com
