bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__guardian_parallel_reviews_render_aggregate_status.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: rendered
---
• Reviewing 2 approval requests (0s • esc to interrupt)
  └ • rm -rf '/tmp/guardian target 1'
    • rm -rf '/tmp/guardian target 2'


› Ask Codex to do anything

  ? for shortcuts                                    100% context left
