bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: exec_blob
---
• Ran sleep 1
  └ (no output)
