bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__interrupt_preserves_unified_exec_wait_streak.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: snapshot
---
cells=1
■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
