bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__interrupted_turn_error_message.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: last
---
■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
