bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__local_image_attachment_history_snapshot.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: combined
---
• Viewed Image
  └ example.png
